# IntelliQuery

./: .gitignore  README.md  pyproject.toml
demo_app/: .connections.json  README.md  llm_providers.yaml.example  main.py  requirements.txt  state.py
demo_app/.chat_history/: 455bc34f-61c7-4019-b5f5-899a4d92f18f.json  9c875059-0971-4204-b473-f9fff3ae821d.json
demo_app/.streamlit/: secrets.toml
demo_app/pages/: chat.py  connection_manager.py
demo_app/services/: chat_service.py  connection_service.py  llm_service.py
demo_app/tests/: conftest.py  test_main.py
demo_app/ui_components/: chat_renderer.py  sidebar.py
src/intelliquery/: __init__.py  agent.py  database.py  database_analyzer.py  facade.py  models.py  orchestrator.py  orchestrator_deprecated.py
src/intelliquery/agents/: bi_agent.py  sql_agent.py  vis_agent.py
src/intelliquery/core/: caching.py  database.py  database_analyzer.py  utils.py  vis_provider.py
src/intelliquery/models/: public.py
src/intelliquery/models/bi_agent/: agent_io.py  public.py  state.py
src/intelliquery/models/sql_agent/: agent_io.py  state.py
src/intelliquery/models/vis_agent/: agent_io.py  public.py  state.py
src/intelliquery/prompts/: schema_analyzer.prompt  system.prompt
src/intelliquery/prompts/bi_agent/: react_agent.prompt
src/intelliquery/prompts/reflection_workflow/: reflection.prompt
src/intelliquery/prompts/sql_agent/: direct_generation.prompt  reflection.prompt  schema_analyzer.prompt
src/intelliquery/prompts/vis_agent/: react_agent.prompt  vis_functions_mapping.json  visualization_agent_framework.yaml
src/intelliquery/workflows/: base.py  reflection.py  simple.py
src/intelliquery/workflows/bi_agent/: react.py
src/intelliquery/workflows/sql_agent/: base.py  reflection.py  simple.py
src/intelliquery/workflows/vis_agent/: react.py
src/sql_agent/: __init__.py  agent.py  database.py  exceptions.py  models.py
tests/core/: test_caching.py  test_database_analyzer.py
tests/workflows/: test_workflows.py
