[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "intelliquery"
version = "0.1.0"
authors = [
  { name="Muhammad Abd Al-sattar", email="muhammadabdalsattar@gmail.com" },
]
description = "An agentic AI toolkit for democratizing BI and database access through natural language."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
    "Topic :: Bussiness Intelligence",
]

# Core Dependencies 
dependencies = [
    "pandas>=2.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary",
    "pydantic>=2.0",
    "langgraph",
    "nexus-llm @ git+https://github.com/Muhammad-Abdelsattar/nexus-llm.git",
    "langchain-google-genai",
    "typing-extensions",
    "sqlparse",
    "python-dotenv",
    "pyyaml",
    "plotly"
]


# Optional Dependencies
# To install:
#   pip install .[test]
#   pip install .[dev]
[project.optional-dependencies]
# Dependencies needed specifically for running the test suite
test = [
    "pytest>=7.0",
    "pytest-mock",
    "pytest-cov", 
]

# Setuptools Configuration
[tool.setuptools]
package-dir = {"" = "src"}
# Automatically find all packages within the 'src' directory.
packages = { find = { where = ["src"] } }


# Pytest Configuration
[tool.pytest.ini_options]
minversion = "7.0"
# Specifies the directory to search for tests.
testpaths = [
    "tests",
]
dotenv_files = [
    ".env.test",
    ".env",
]
addopts = "-ra --strict-markers --import-mode=importlib"
